--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
-<<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <img src="My Pic.jpeg" alt="My Pic">
     <meta charset="utf-8">
     <title>Shani</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/style.css">
 
-  <h1> ROSHAAN ALI SHAH </h1>
+    </head>
 
-  <p><h4><em>Im from Pakistan and im 18 years old, i love web development and coding to some extent. Iam fond of playing games, i love geopolitics and i am an advocate for human rights.I write articles occasionally. I love watching movies and im an extrovert so i love traveling. Iam into medieval era aswell.</p></em></h4>
+    <body>
+         <h1> ROSHAAN ALI SHAH </h1>
 
-    <hr>
 
-  <strong><h2>Qualifications:-</h2></strong>
+        <ul>
+         <p><h4><em>Im from Pakistan and im 18 years old, i love web development and coding to some extent. Iam fond of playing games, i love geopolitics and i am an advocate for human rights.I write articles occasionally. I love watching movies and im an extrovert so i love traveling. Iam into medieval era aswell.</em></p></h4>
+       </ul>
+         <hr>
 
-    <table cellspacing="10">
-      <thead>
+         <strong><h2>Qualifications:-</h2></strong>
+
+      <table cellspacing="10">
+        <thead>
         <tr>
           <em><th>Degree</th>
           <th>Education</th>
+          <th>Field</th>
           <th>Date</th></em>
         </tr>
-      </thead>
-      <tbody>
+          </thead>
+          <tbody>
         <tr>
-          <em><td>Matriculation</td></em>
-          <em><td>Capital Education System</td></em>
-          <em><td>2018-2020</td></em>
+          <td><em>Matriculation</em></td>
+          <td><em>Capital Education System</em></td>
+          <td><em>Computer Science</em></td>
+          <td><em>2018-2020</em></td>
         </tr>
-        <tr>
-          <td>Intermediate</td>
-          <td>Punjab College</td>
-          <td>2020-2022</td>
-        </tr>
-      <tr>
-        <td>Bachelors</td>
-        <td>Szabist University</td>
-        <td>2023-ONGOING</td></em>
+
+          <tr>
+          <td><em>Intermediate</em></td>
+          <td><em>Punjab College</em></td>
+          <td><em>Computer Science</em></td>
+          <td><em>2020-2022</em></td>
       </tr>
+        <tr>
+        <td><em>Bachelors</em></td>
+        <td><em>Szabist University</em></td>
+        <td><em>Software Engineer</em></td>
+        <td><em>2023-ONGOING</em></td>
+
+      </tr>
+
+
+
     </tbody>
+
     </table>
 
 
     <hr>
-    <strong><h2>What I Like:-</h2></strong>
+      <h2><strong>What I Like:-</strong></h2>
     <ul>
       <em><li>Web development</li>
       <li>Movies and Shows</li>
@@ -51,28 +66,48 @@
       <li>Competitive games</li>
       <li>Beatboxing</li>
       <li><a href="https://docs.google.com/document/d/1VAyReGrPugAVBYMPxf_rM-hXVo_PGohZoilwrKylLhQ/edit">Articles</a></li>
-    </ul>
+    </ul></em>
+
+
      <hr>
-    <h2>Skills:-</h2>
+
+    <h2><strong>Skills:-</strong></h2>
 
    <table cellspacing="5">
      <tr>
-       <td>Web Development</td>
-       <td>★★✰✰✰</td>
+       <td><strong>Web Development</strong></td>
+       <td><strong>★★★✰✰</strong></td>
      </tr>
      <tr>
-       <td>Beatboxing</td>
-       <td> ★★★✰✰</td>
+       <td><strong>Beatboxing</strong></td>
+       <td><strong>★★★★★</strong></td>
        <tr>
-         <td>C++</td>
-         <td>★★★✰✰</td>
+         <td><strong>C++</strong></td>
+         <td><strong>★★★★✰</strong></td>
        </tr>
-     </tr>
-   </table>
-    <hr>
-    <a href="Contact Us.html">Contact us</a>
 
-    
+       </table>
+   <hr>
+       <table>
+
+    <h2><strong>Languages:-</strong></h2>
+
+    <tr>
+      <td>Urdu</td>
+      <td>★★★★★</td>
+    </tr>
+    <tr>
+      <td>English</td>
+      <td>★★★★★</td>
+    </tr>
+   </table>
+
+     <hr>
+
+    <p>
+     <a href="Contact Me.html">Contact Me</a>
+   </p>
+
 
 
 </body>
